--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ var debug = {};
 
 
     <!-- Default CSS file to the JS Tree -->
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Jquery import -->
     <script type="text/javascript" src="./lib/jquery-1.10.2/jquery-1.10.2.min.js"></script>
     <!-- Js Tree Library -->
@@ -156,7 +156,7 @@ var debug = {};
             <div class="panel panel-default">
                 <div class="panel-body" style="!important;padding: 0px;height: 75px" >
 
-                    <div  class="col-xs-6" style="height: 60px" >
+                    <div  class="col-xs-5" style="height: 60px" >
                         <!--<div class="checkbox">-->
                             <!--<label>-->
                                 <!--<input type="checkbox" id="popup-checkbox" checked> InfoBox-->
@@ -210,6 +210,23 @@ var debug = {};
                 }
             });
 
+            opacitySlider.noUiSlider.on('update', function( values, handle ) {
+                var nodeId = $("#treeViewDiv").jstree("get_selected");
+                if(viewer != null){
+                    var myMatrix = viewer.scene.findNode(nodeId);
+
+                    if(myMatrix != null){
+                        /* Some weird thing I dont know why */
+                        if(myMatrix.nodes[0].type == "material"){
+                            myMatrix.nodes[0].setAlpha(opacitySlider.noUiSlider.get());
+                        }else{
+                            myMatrix.parent.setAlpha(opacitySlider.noUiSlider.get());
+                        }
+                    }
+                }
+
+            });
+
             noUiSlider.create(slider, {
                 start: [ 0 ],
                 connect: 'lower',
@@ -226,32 +243,7 @@ var debug = {};
                 }
             });
 
-
-            var tipHandles = slider.getElementsByClassName('noUi-handle'), tooltips = [];
-
-            // Add divs to the slider handles.
-            for ( var i = 0; i < tipHandles.length; i++ ){
-                tooltips[i] = document.createElement('div');
-                tipHandles[i].appendChild(tooltips[i]);
-            }
-
-            // Add a class for styling
-            tooltips[0].className += 'tooltip';
-            // Add additional markup
-            tooltips[0].innerHTML = '<strong>Value: </strong><span></span>';
-            // Replace the tooltip reference with the span we just added
-            tooltips[0] = tooltips[0].getElementsByTagName('span')[0];
-
-//            // When the slider changes, write the value to the tooltips.
-//            slider.noUiSlider.on('update', function( values, handle ){
-//                tooltips[handle].innerHTML = values[handle];
-//            });
-
-
-
             slider.noUiSlider.on('update', function( values, handle ) {
-                tooltips[handle].innerHTML = values[handle];
-//                alert( slider.noUiSlider.get() );
                 if(sliderSwitch){
                     /* Check if the current node selected is a buildingstorey */
                     var nodeId = $("#treeViewDiv").jstree("get_selected");
@@ -601,12 +593,12 @@ function move(inc){
                         var modelMatrix  = myMatrix.nodes[0].nodes[0].getModelMatrix();
                         modelMatrix[13] += inc;
                         myMatrix.nodes[0].nodes[0].setElements(modelMatrix);
-//                        myMatrix.nodes[0].setAlpha(0.4);
+//                        myMatrix.nodes[0].setAlpha(0.5);
                     }else{
                         var modelMatrix  = myMatrix.nodes[0].getModelMatrix();
                         modelMatrix[13] += inc;
                         myMatrix.nodes[0].setElements(modelMatrix);
-//                        myMatrix.parent.setAlpha(0.4);
+//                        myMatrix.parent.setAlpha(0.5);
                     }
                 }
             }
