adding more div to the opactiy and x axis sliders

--- a/index.html
+++ b/index.html
@@ -157,37 +157,38 @@ var debug = {};
             <div class="panel panel-default">
                 <div class="panel-body" style="!important;padding: 0px;height: 75px" >
 
-                    <div  class="col-xs-5" style="height: 60px" >
+                    <div  class="col-xs-12" style="height: 60px" >
                         <!--<div class="checkbox">-->
                             <!--<label>-->
                                 <!--<input type="checkbox" id="popup-checkbox" checked> InfoBox-->
                             <!--</label>-->
                         <!--</div>-->
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-2">
                             <button type="button" class="btn btn-default btn-sm" id="infoBoxVisibility" style="margin-top: 5px">
                                 Info Box <span class="fa fa-check" aria-hidden="true"></span>
                             </button>
                         </div>
 
-                        <div class="col-lg-9">
+                        <div class="col-lg-5">
                             <span class="label label-default">X Axis Slider</span>
                             <span class="label label-default">Value</span>
                             <div id="sliderx"></div>
                         </div>
 
-
-                    </div>
-
-                    <div  class="col-xs-6" style="height: 60px" >
-
-                        <div class="col-lg-5">
+                        <div class="col-lg-4">
                             <span class="label label-default">Opacity Slider</span>
                             <div id="opacitySlider"></div>
                         </div>
 
-
                     </div>
+
+                    <!--<div  class="col-xs-5" style="height: 60px" >-->
+
+                        <!-- -->
+
+
+                    <!--</div>-->
 
                 </div>
             </div>
