refactoring the div size with in the sliders

--- a/index.html
+++ b/index.html
@@ -157,26 +157,33 @@ var debug = {};
             <div class="panel panel-default">
                 <div class="panel-body" style="!important;padding: 0px;height: 75px" >
 
-                    <div  class="col-xs-12" style="height: 60px" >
+                    <div  class="col-xs-2" style="height: 60px" >
+                            <button type="button" class="btn btn-default btn-sm" id="infoBoxVisibility" style="margin-top: 5px">
+                                Info Box <span class="fa fa-check" aria-hidden="true"></span>
+                            </button>
+
+                    </div>
+
+                    <div  class="col-xs-9" style="height: 60px" >
                         <!--<div class="checkbox">-->
                             <!--<label>-->
                                 <!--<input type="checkbox" id="popup-checkbox" checked> InfoBox-->
                             <!--</label>-->
                         <!--</div>-->
 
-                        <div class="col-lg-2">
-                            <button type="button" class="btn btn-default btn-sm" id="infoBoxVisibility" style="margin-top: 5px">
-                                Info Box <span class="fa fa-check" aria-hidden="true"></span>
-                            </button>
-                        </div>
+                        <!--<div class="col-xs-2">-->
+                            <!--<button type="button" class="btn btn-default btn-sm" id="infoBoxVisibility" style="margin-top: 5px">-->
+                                <!--Info Box <span class="fa fa-check" aria-hidden="true"></span>-->
+                            <!--</button>-->
+                        <!--</div>-->
 
-                        <div class="col-lg-5">
+                        <div class="col-xs-6">
                             <span class="label label-default">X Axis Slider</span>
                             <span class="label label-default">Value</span>
                             <div id="sliderx"></div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-xs-6">
                             <span class="label label-default">Opacity Slider</span>
                             <div id="opacitySlider"></div>
                         </div>
