adding js schema files and loading from the local for bim server api

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ var debug = {};
     <!-- Jquery UI JS -->
     <script type="text/javascript" src="./lib/noUiSlider.8.0.2/nouislider.js"></script>
 
+    <!-- Adding the schema files -->
+    <script type="text/javascript" src="./js/ifc2x3tc1.js"></script>
+    <script type="text/javascript" src="./js/ifc4.js"></script>
+
 
     <!-- Default CSS file to the JS Tree -->
     <link rel="stylesheet" href="css/style.css" />
@@ -67,6 +71,7 @@ var debug = {};
 	<link rel="stylesheet" href="./lib/jquery-ui-1.10.4.custom/css/smoothness/jquery-ui-1.10.4.custom.css">
 	<!-- Jquery UI JS -->
     <script type="text/javascript" src="./lib/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js"></script>
+
 
 
 
