moving visualization functionality to external js and adding searching funtionality to the js tree

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ var debug = {};
     <script type="text/javascript" src="./lib/noUiSlider.8.0.2/nouislider.js"></script>
     <script type="text/javascript" src="./js/slidercontrol.js"></script>
 
+    <!-- Script that handles functionalities of showing and hiding elements-->
+    <script type="text/javascript" src="./js/visualizercontrol.js"></script>
+
     <!-- Adding the schema files -->
     <script type="text/javascript" src="./js/ifc2x3tc1.js"></script>
     <script type="text/javascript" src="./js/ifc4.js"></script>
@@ -102,6 +105,8 @@ var debug = {};
                         <span class="fa fa-refresh" aria-hidden="true"></span>
                     </button>
                 </h3>
+
+                <input type="text" id="plugins4_q">
             </div>
             <!-- Div tag to display the json tree view-->
             <div id="treeViewDiv" class="col-lg-12" style="height: 600px; overflow: auto">
