moving js tree functionalities to the external js

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ var debug = {};
                     </button>
                 </h3>
 
-                <input type="text" id="plugins4_q">
+                <input type="text" id="jsTreeSearch">
             </div>
             <!-- Div tag to display the json tree view-->
             <div id="treeViewDiv" class="col-lg-12" style="height: 600px; overflow: auto">
